--- a/estructuraBasica.html
+++ b/estructuraBasica.html
@@ -13,7 +13,9 @@
             architecto necessitatibus accusantium ducimus, 
             natus quisquam corporis nemo illum optio officia ipsum.
         </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Java_Black_icon.svg" 
+        <a href="paginaSpeedRun.html">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Java_Black_icon.svg">
+        </a>
         alt="Java logo", title="Imagen de Java" 
         width="320", align="right">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio 
